restructured query to only grab the latest blog post

--- a/src/app.scss
+++ b/src/app.scss
@@ -83,6 +83,7 @@ html {
     align-items: stretch;
     border-radius: 6px;
     overflow: hidden;
+    margin-bottom: 4px;
 
     .blog-header {
       background-color: #655545;
