--- a/src/app.scss
+++ b/src/app.scss
@@ -110,6 +110,41 @@ html {
       padding: 0.5rem;
       flex: 1;
     }
+
+    .blog-fractal-gallery {
+      display: flex;
+      flex-direction: row;
+      align-items: stretch;
+      justify-content: center;
+
+      .blog-fractal-thumbnail {
+        background-color: #655545;
+        flex: 0 1 160px;
+        max-width: 160px;
+        padding: 0.5rem;
+        border-radius: 0.25rem;
+        margin: 0.25rem;
+        overflow: hidden;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        .blog-fractal-thumbnail-image {
+          max-height: 90px;
+
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+          }
+        }
+      }
+    }
   }
 
   .column {
