--- a/src/app.scss
+++ b/src/app.scss
@@ -96,6 +96,55 @@ html {
     flex: 2;
   }
 
+  .blog-post-list {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    border-radius: 0.25rem;
+    overflow: hidden;
+
+    .blog-post-list-pagination {
+      background-color: #655545;
+      padding: 0.5rem;
+    }
+
+    .blog-post-list-body {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+
+      .blog-post-list-item {
+        background-color: #453525;
+        padding: 0.5rem;
+
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+
+        .blog-post-list-item-created-at {
+          flex: 0 1 18rem;
+        }
+
+        .blog-post-list-item-title {
+          flex: 1;
+        }
+
+        .blog-post-list-item-author {
+          flex: 0 1 10rem;
+          text-align: right;
+        }
+      }
+
+      & > *:not(:last-child) {
+        margin-bottom: 0.125rem;
+      }
+    }
+
+    & > *:not(:last-child) {
+      margin-bottom: 0.125rem;
+    }
+  }
+
   .blog-post {
     display: flex;
     flex-direction: column;
