--- a/src/components/fractal/thumbnail.scss
+++ b/src/components/fractal/thumbnail.scss
@@ -12,7 +12,8 @@
   justify-content: center;
 
   .fractal-thumbnail.inner {
-    max-height: calc(90px + 1.25rem);
+    max-height: calc(90px + 2rem);
+    max-width: 160px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,6 +21,7 @@
     img {
       width: 100%;
       height: 100%;
+      max-height: 90px;
       object-fit: contain;
     }
   }
@@ -27,5 +29,8 @@
   .fractal-thumbnail.description {
     text-align: center;
     margin-top: 0.25rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
