--- a/src/components/layout/column.scss
+++ b/src/components/layout/column.scss
@@ -1,11 +1,12 @@
-.top-level.column {
-  flex: 0 1 15rem;
+.column {
+  flex: 0 1 12rem;
 
   display: flex;
   flex-direction: column;
   align-items: stretch;
 
   .column-header {
+    padding: 0.5rem;
     background-color: #655545;
     margin-bottom: 0.125rem;
   }
@@ -14,5 +15,10 @@
     background-color: #453525;
     padding: 0.5rem;
     flex-grow: 1;
+
+    ul {
+      padding-left: 1rem;
+      margin: 0;
+    }
   }
 }
