--- a/src/components/fractal/image-list.scss
+++ b/src/components/fractal/image-list.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    justify-content: center;
     flex-wrap: wrap;
   }
 }
