--- a/src/components/layout/subheader.scss
+++ b/src/components/layout/subheader.scss
@@ -1,24 +1,33 @@
-.column {
-  flex: 0 1 8rem;
+.subheader {
+  flex: 0 1;
 
   display: flex;
   flex-direction: column;
   align-items: stretch;
 
-  .column-header {
-    padding: 0.5rem;
-    background-color: #655545;
-    margin-bottom: 0.125rem;
-  }
-
-  .column-body {
+  .subheader-navigation {
     background-color: #453525;
     padding: 0.5rem;
     flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 
-    ul {
-      padding-left: 1rem;
+    .subheader-links {
+      list-style: none;
       margin: 0;
+      padding: 0;
+      overflow: hidden;
+
+      li {
+        float: left;
+      }
+
+      li:not(:first-child)::before {
+        content: "•";
+        margin-right: 1rem;
+        margin-left: 1rem;
+      }
     }
   }
 }
