--- a/src/components/fractal/thumbnail.module.scss
+++ b/src/components/fractal/thumbnail.module.scss
@@ -1,36 +1,27 @@
-.fractal-thumbnail-outer {
+.fractal-thumbnail {
+  display: flex;
+  flex-direction: column;
   background-color: #655545;
-  flex: 0 1 160px;
-  max-width: 160px;
   padding: 0.5rem;
   border-radius: 0.25rem;
-  margin: 0.25rem;
   overflow: hidden;
+  margin: 0.25rem;
 
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
-  .fractal-thumbnail-inner {
-    max-height: calc(90px + 2rem);
-    max-width: 160px;
+  .fractal-thumbnail-image {
+    width: 160px;
+    height: 120px;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    img {
-      width: 100%;
-      height: 100%;
-      max-height: 90px;
-      object-fit: contain;
-    }
   }
 
   .fractal-thumbnail-description {
-    text-align: center;
-    margin-top: 0.25rem;
+    width: 160px;
+    height: 1rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin: 0.5rem 0 0 0;
   }
 }
